[gd_scene load_steps=69 format=3 uid="uid://s1djxy0818iw"]

[ext_resource type="Script" path="res://Scripts/Character/golem_character.gd" id="1_xkrp5"]
[ext_resource type="Texture2D" uid="uid://c67ms54p22bcv" path="res://Assets/Art/Character/minifolks by LYSeeK/Golems/Outline/MiniOvergrownGolem.png" id="2_pgwdh"]
[ext_resource type="Script" path="res://Scripts/States/CharacterStateMachine.gd" id="3_j42ua"]
[ext_resource type="Script" path="res://Scripts/States/CharacterIdleState.gd" id="4_m4l62"]
[ext_resource type="Script" path="res://Scripts/States/CharacterMoveState.gd" id="5_72jmr"]
[ext_resource type="Script" path="res://Scripts/States/CharacterStunnedState.gd" id="7_map0i"]
[ext_resource type="Script" path="res://Scripts/States/Golem Abilities/GolemE.gd" id="8_ut7e2"]
[ext_resource type="Script" path="res://Scripts/States/Golem Abilities/GolemL.gd" id="9_3oqcu"]
[ext_resource type="Script" path="res://Scripts/States/CharacterRespawningState.gd" id="10_byx45"]
[ext_resource type="Script" path="res://Scripts/States/Golem Abilities/GolemR.gd" id="10_phvyg"]
[ext_resource type="Script" path="res://Scripts/States/Golem Abilities/GolemSpace.gd" id="11_0u3me"]
[ext_resource type="PackedScene" uid="uid://vi6oha8iu5ft" path="res://Scenes/DebugTools/StateLabel.tscn" id="11_s8xxs"]
[ext_resource type="PackedScene" uid="uid://b5v0euhixnaa1" path="res://Scenes/Components/health_component.tscn" id="12_5yetq"]
[ext_resource type="PackedScene" uid="uid://ds0gmpcaf3o4c" path="res://Scenes/Components/hurtbox_component.tscn" id="13_ra0vb"]
[ext_resource type="Texture2D" uid="uid://bh0gb8tq7x8kc" path="res://Assets/Art/Effects/Weapon slash.png" id="14_dy1p6"]
[ext_resource type="PackedScene" uid="uid://56mf3cu3a73i" path="res://Scenes/UI/respawning.tscn" id="16_k8tee"]
[ext_resource type="PackedScene" uid="uid://cx4bi7d1ujbn5" path="res://Scenes/UI/progress_bar.tscn" id="18_ccjut"]
[ext_resource type="Script" path="res://Scripts/Components/stun_component.gd" id="18_ebue8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4x4hu"]
atlas = ExtResource("2_pgwdh")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msqj0"]
atlas = ExtResource("2_pgwdh")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryy1r"]
atlas = ExtResource("2_pgwdh")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb3xv"]
atlas = ExtResource("2_pgwdh")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iajkq"]
atlas = ExtResource("2_pgwdh")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nnuu"]
atlas = ExtResource("2_pgwdh")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ici1"]
atlas = ExtResource("2_pgwdh")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edeh3"]
atlas = ExtResource("2_pgwdh")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca6dc"]
atlas = ExtResource("2_pgwdh")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ji5h"]
atlas = ExtResource("2_pgwdh")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqju4"]
atlas = ExtResource("2_pgwdh")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oni7p"]
atlas = ExtResource("2_pgwdh")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywpal"]
atlas = ExtResource("2_pgwdh")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4i6e"]
atlas = ExtResource("2_pgwdh")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kbrp"]
atlas = ExtResource("2_pgwdh")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcgt1"]
atlas = ExtResource("2_pgwdh")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr7xr"]
atlas = ExtResource("2_pgwdh")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bsqe"]
atlas = ExtResource("2_pgwdh")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc2dj"]
atlas = ExtResource("2_pgwdh")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_llmmp"]
atlas = ExtResource("2_pgwdh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bqjc"]
atlas = ExtResource("2_pgwdh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_enlj1"]
atlas = ExtResource("2_pgwdh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_woarj"]
atlas = ExtResource("2_pgwdh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny3ea"]
atlas = ExtResource("2_pgwdh")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klaj0"]
atlas = ExtResource("2_pgwdh")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx2gl"]
atlas = ExtResource("2_pgwdh")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m67f"]
atlas = ExtResource("2_pgwdh")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a412a"]
atlas = ExtResource("2_pgwdh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsddw"]
atlas = ExtResource("2_pgwdh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6misj"]
atlas = ExtResource("2_pgwdh")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36rxy"]
atlas = ExtResource("2_pgwdh")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1dwk"]
atlas = ExtResource("2_pgwdh")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghh54"]
atlas = ExtResource("2_pgwdh")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fe3k"]
atlas = ExtResource("2_pgwdh")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjgq4"]
atlas = ExtResource("2_pgwdh")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2wkft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x4hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msqj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msqj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msqj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryy1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb3xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iajkq")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nnuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ici1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ici1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ici1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ici1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edeh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca6dc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ji5h")
}],
"loop": false,
"name": &"Block",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqju4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oni7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywpal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4i6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kbrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcgt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr7xr")
}],
"loop": false,
"name": &"Death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bsqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc2dj")
}],
"loop": false,
"name": &"Hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llmmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bqjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enlj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woarj")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny3ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klaj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx2gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m67f")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a412a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsddw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6misj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36rxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1dwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghh54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fe3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjgq4")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i4mf"]
size = Vector2(11, 13)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_25juu"]
radius = 4.0
height = 12.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_boqm3"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("Sprite:animation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("Sprite:flip_h")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath("Projectile Rotation:rotation")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath("Projectile Rotation/Weapon Slash:visible")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath("Projectile Rotation/Weapon Slash:animation")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false
properties/6/path = NodePath("Projectile Rotation/Weapon Slash:frame")
properties/6/spawn = true
properties/6/sync = true
properties/6/watch = false
properties/7/path = NodePath("Camera2D:position")
properties/7/spawn = true
properties/7/sync = true
properties/7/watch = false
properties/8/path = NodePath("Sprite:frame")
properties/8/spawn = true
properties/8/sync = true
properties/8/watch = false
properties/9/path = NodePath("Display Name Label:text")
properties/9/spawn = true
properties/9/sync = true
properties/9/watch = false
properties/10/path = NodePath("ProgressBar:value")
properties/10/spawn = true
properties/10/sync = true
properties/10/watch = false
properties/11/path = NodePath("ProgressBar:visible")
properties/11/spawn = true
properties/11/sync = true
properties/11/watch = false
properties/12/path = NodePath("Health Component:health")
properties/12/spawn = true
properties/12/sync = true
properties/12/watch = false
properties/13/path = NodePath("Projectile Rotation/Weapon Slash/Area2D/LCollisonBox:disabled")
properties/13/spawn = true
properties/13/sync = true
properties/13/watch = false
properties/14/path = NodePath("GolemRHitbox/RCollisonBox:disabled")
properties/14/spawn = true
properties/14/sync = true
properties/14/watch = false
properties/15/path = NodePath("GolemSpaceHitbox/SpaceCollisonBox:disabled")
properties/15/spawn = true
properties/15/sync = true
properties/15/watch = false
properties/16/path = NodePath("GolemEHitbox/ECollisonBox:disabled")
properties/16/spawn = true
properties/16/sync = true
properties/16/watch = false
properties/17/path = NodePath(".:eArray")
properties/17/spawn = true
properties/17/sync = true
properties/17/watch = false

[sub_resource type="AtlasTexture" id="AtlasTexture_1iqvi"]
atlas = ExtResource("14_dy1p6")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxpkg"]
atlas = ExtResource("14_dy1p6")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqaup"]
atlas = ExtResource("14_dy1p6")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7xxb"]
atlas = ExtResource("14_dy1p6")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_acei4"]
atlas = ExtResource("14_dy1p6")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_issgv"]
atlas = ExtResource("14_dy1p6")
region = Rect2(160, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l0wbc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iqvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxpkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqaup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7xxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acei4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_issgv")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v5q25"]
radius = 7.26374
height = 28.5272

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k2p5o"]
radius = 31.0
height = 68.0

[sub_resource type="Gradient" id="Gradient_nc4ts"]
offsets = PackedFloat32Array(0.0869565, 0.664596)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vgn71"]
gradient = SubResource("Gradient_nc4ts")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.491071, 0.5)

[node name="Golem" type="CharacterBody2D" node_paths=PackedStringArray("stateMachine", "multiplayer_synchronizer", "stunComponent", "healthComponent") groups=["Player"]]
collision_mask = 2
script = ExtResource("1_xkrp5")
stateMachine = NodePath("CharacterStateMachine")
multiplayer_synchronizer = NodePath("MultiplayerSynchronizer")
stunComponent = NodePath("StunComponent")
healthComponent = NodePath("Health Component")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2wkft")
animation = &"Jump"
autoplay = "Idle"

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 8.5)
shape = SubResource("RectangleShape2D_4i4mf")

[node name="Health Component" parent="." node_paths=PackedStringArray("stateMachine") instance=ExtResource("12_5yetq")]
maxHealth = 10
stateMachine = NodePath("../CharacterStateMachine")

[node name="StunComponent" type="Node" parent="."]
script = ExtResource("18_ebue8")

[node name="Hurtbox Component" parent="." node_paths=PackedStringArray("healthComponent", "stunComponent") groups=["Player"] instance=ExtResource("13_ra0vb")]
visible = false
healthComponent = NodePath("../Health Component")
stunComponent = NodePath("../StunComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox Component"]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_25juu")
debug_color = Color(0.894118, 0, 0.780392, 0.419608)

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "sprite", "initialState")]
script = ExtResource("3_j42ua")
character = NodePath("..")
sprite = NodePath("../Sprite")
initialState = NodePath("CharacterIdleState")

[node name="CharacterIdleState" type="Node" parent="CharacterStateMachine"]
script = ExtResource("4_m4l62")

[node name="CharacterMoveState" type="Node" parent="CharacterStateMachine"]
script = ExtResource("5_72jmr")

[node name="CharacterRespawningState" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("healthComponent", "respawning")]
script = ExtResource("10_byx45")
healthComponent = NodePath("../../Health Component")
respawning = NodePath("../../CanvasLayer/Respawning")
canMove = false
canAttack = false
immune = true
canBeStunned = false

[node name="CharacterStunnedState" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("stunComponent")]
script = ExtResource("7_map0i")
stunComponent = NodePath("../../StunComponent")
canMove = false
canAttack = false
canBeStunned = false

[node name="E" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_ut7e2")

[node name="L" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("weapon_slash")]
script = ExtResource("9_3oqcu")
weapon_slash = NodePath("../../Projectile Rotation/Weapon Slash")
canMove = false
canAttack = false

[node name="R" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("weapon_slash")]
script = ExtResource("10_phvyg")
weapon_slash = NodePath("../../Projectile Rotation/Weapon Slash")
canMove = false
canAttack = false

[node name="Space" type="Node" parent="CharacterStateMachine"]
script = ExtResource("11_0u3me")
canMove = false
canAttack = false

[node name="StateLabel" parent="." node_paths=PackedStringArray("character") instance=ExtResource("11_s8xxs")]
offset_left = -69.0
offset_top = -25.0
offset_right = 86.0
offset_bottom = 1.0
text = "State:"
character = NodePath("../CharacterStateMachine")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_boqm3")

[node name="Projectile Rotation" type="Marker2D" parent="."]
position = Vector2(0, 9)

[node name="Weapon Slash" type="AnimatedSprite2D" parent="Projectile Rotation"]
visible = false
position = Vector2(11, 0)
rotation = -1.24442
sprite_frames = SubResource("SpriteFrames_l0wbc")
autoplay = "default"
frame = 5
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="Projectile Rotation/Weapon Slash"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="LCollisonBox" type="CollisionShape2D" parent="Projectile Rotation/Weapon Slash/Area2D"]
visible = false
position = Vector2(-0.936317, 2.03059)
rotation = 1.24107
shape = SubResource("CapsuleShape2D_v5q25")
disabled = true

[node name="GolemRHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="RCollisonBox" type="CollisionShape2D" parent="GolemRHitbox"]
visible = false
position = Vector2(0, 14)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_k2p5o")
disabled = true

[node name="GolemSpaceHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="SpaceCollisonBox" type="CollisionShape2D" parent="GolemSpaceHitbox"]
position = Vector2(0, 14)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_k2p5o")
disabled = true
debug_color = Color(0.858824, 0.337255, 0.352941, 0.419608)

[node name="GolemEHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="ECollisonBox" type="CollisionShape2D" parent="GolemEHitbox"]
position = Vector2(0, 14)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_k2p5o")
disabled = true
debug_color = Color(0, 0.639216, 0.356863, 0.419608)

[node name="ETimer" type="Timer" parent="GolemEHitbox"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 9)
color = Color(0.921569, 0.627451, 0.231373, 1)
texture = SubResource("GradientTexture2D_vgn71")

[node name="Display Name Label" type="Label" parent="."]
visible = false
offset_left = -13.0
offset_top = -10.0
offset_right = 36.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 8
text = "player"

[node name="ProgressBar" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("18_ccjut")]
offset_left = -20.0
offset_top = 16.0
offset_right = 20.0
offset_bottom = 20.0
healthComponent = NodePath("../Health Component")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Respawning" parent="CanvasLayer" node_paths=PackedStringArray("stateMachine") instance=ExtResource("16_k8tee")]
visible = false
stateMachine = NodePath("../../CharacterStateMachine")

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="animation_finished" from="Projectile Rotation/Weapon Slash" to="." method="_on_weapon_slash_animation_finished"]
[connection signal="area_entered" from="Projectile Rotation/Weapon Slash/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="GolemRHitbox" to="." method="_on_golem_r_hitbox_area_entered"]
[connection signal="area_entered" from="GolemSpaceHitbox" to="." method="_on_golem_space_hitbox_area_entered"]
[connection signal="area_entered" from="GolemEHitbox" to="." method="_on_golem_e_hitbox_area_entered"]
[connection signal="area_exited" from="GolemEHitbox" to="." method="_on_golem_e_hitbox_area_exited"]
[connection signal="timeout" from="GolemEHitbox/ETimer" to="." method="_on_e_timer_timeout"]
